--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -4,4 +4,4 @@ framework:
             sqs: enqueue://default?topic[name]=YOUR_QUEUE_NAME&queue[name]=YOUR_QUEUE_NAME&receiveTimeout=3
 
         routing:
-            'App\Piatrouski\ExampleSqs\Model\Example': sqs
+            'App\Piatrouski\ExampleSqs\Message\Example': sqs
